Revert "Refactor card detail to SKU: Update schema, services, and repositories"
This reverts commit a099580aff6f567900f5d78e6617b5fef93145c9.
