# docs/swagger.yaml
@@ -14,16 +14,54 @@ definitions:
     - PurchaseHistoryStatusConfirm
     - PurchaseHistoryStatusSuccess
     - PurchaseHistoryStatusFailed
+  top-up-api_internal_schema.CardDetailMiniatureResponse:
+    properties:
+      card_price:
+        $ref: '#/definitions/top-up-api_internal_schema.CardPriceResponse'
+      id:
+        type: integer
+      provider: {}
+    type: object
+  top-up-api_internal_schema.CardDetailResponse:
+    properties:
+      card_price:
+        $ref: '#/definitions/top-up-api_internal_schema.CardPriceResponse'
+      cash_back: {}
+      id:
+        type: integer
+      provider:
+        $ref: '#/definitions/top-up-api_internal_schema.ProviderInfo'
+    type: object
+  top-up-api_internal_schema.CardDetailsGroupByProvider:
+    properties:
+      card_details:
+        items:
+          $ref: '#/definitions/top-up-api_internal_schema.CardDetailMiniatureResponse'
+        type: array
+      provider_code:
+        type: string
+      provider_logo_url:
+        type: string
+      provider_name:
+        type: string
+    type: object
+  top-up-api_internal_schema.CardPriceResponse:
+    properties:
+      code:
+        type: string
+      value:
+        type: integer
+    type: object
   top-up-api_internal_schema.OrderConfirmRequest:
     properties:
+      card_detail_id:
+        type: integer
       cash_back_value:
         type: integer
       order_id:
         type: integer
       phone_number:
         type: string
-      sku_id:
-        type: integer
       status:
         $ref: '#/definitions/top-up-api_internal_model.PurchaseHistoryStatus'
       total_price:
@@ -33,23 +71,23 @@ definitions:
     type: object
   top-up-api_internal_schema.OrderRequest:
     properties:
+      card_detail_id:
+        type: integer
       phone_number:
         type: string
-      sku_id:
-        type: integer
       user_id:
         type: integer
     type: object
   top-up-api_internal_schema.OrderResponse:
     properties:
+      card_detail:
+        $ref: '#/definitions/top-up-api_internal_schema.CardDetailResponse'
       cash_back_value:
         type: integer
       order_id:
         type: integer
       phone_number:
         type: string
-      sku:
-        $ref: '#/definitions/top-up-api_internal_schema.SkuResponse'
       status:
         $ref: '#/definitions/top-up-api_internal_model.PurchaseHistoryStatus'
       total_price:
@@ -115,37 +153,6 @@ definitions:
       message:
         type: string
     type: object
-  top-up-api_internal_schema.SkuMiniatureResponse:
-    properties:
-      id:
-        type: integer
-      price:
-        type: integer
-      provider: {}
-    type: object
-  top-up-api_internal_schema.SkuResponse:
-    properties:
-      cash_back: {}
-      id:
-        type: integer
-      price:
-        type: integer
-      provider:
-        $ref: '#/definitions/top-up-api_internal_schema.ProviderInfo'
-    type: object
-  top-up-api_internal_schema.SkusGroupByProvider:
-    properties:
-      provider_code:
-        type: string
-      provider_logo_url:
-        type: string
-      provider_name:
-        type: string
-      sku:
-        items:
-          $ref: '#/definitions/top-up-api_internal_schema.SkuMiniatureResponse'
-        type: array
-    type: object
   top-up-api_internal_schema.UserCreateRequest:
     properties:
       first_name:
@@ -207,7 +214,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/top-up-api_internal_schema.SkusGroupByProvider'
+            $ref: '#/definitions/top-up-api_internal_schema.CardDetailsGroupByProvider'
       summary: Get card details grouped by provider
       tags:
       - card-detail
@@ -225,7 +232,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/top-up-api_internal_schema.SkuResponse'
+              $ref: '#/definitions/top-up-api_internal_schema.CardDetailResponse'
             type: array
       summary: Get card details by provider code
       tags:
@@ -314,7 +321,7 @@ paths:
       summary: Get providers
       tags:
       - provider
-  /purchase-history/{user_id}:
+  /purchase-history/{id}:
     get:
       consumes:
       - application/json
