# internal/schema/cardPrice.go
@@ -1,0 +1,6 @@
+package schema
+
+type CardPriceResponse struct {
+	Code  string `json:"code"`
+	Value int    `json:"value"`
+}
